# rust_iot_mqtt

./: Cargo.toml  README.md  TEST_RESULTS.md
deploy/: docker-compose-with-pgadmin.yml  docker-compose.yml  prometheus.yml
deploy/grafana/provisioning/dashboards/: dashboard.yml  iot-dashboard.json
ingestor/: Cargo.toml  Dockerfile
ingestor/migrations/: 20251002_000001_init.sql
ingestor/src/: batching.rs  db.rs  errors.rs  main.rs  metrics.rs  model.rs  mqtt.rs  rest.rs  validate.rs
ingestor/systemd/: iot-ingestor.service
ingestor/tests/: load_test.rs
scripts/: install-service.sh  start-dependencies.sh
simulator/: Cargo.toml  Dockerfile
simulator/src/: main.rs  telemetry.rs
