[package]
name = "ingestor"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow = "1.0"
axum = "0.7"
tokio = { version = "1.40", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio-rustls", "chrono", "uuid", "migrate"] }
rumqttc = "0.24"
uuid = { version = "1.10", features = ["v4"] }
prometheus = "0.13"
lazy_static = "1.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1.0"

[dev-dependencies]
tokio-test = "0.4"
rand = "0.8"
