[package]
name = "simulator"
version.workspace = true
edition.workspace = true

[dependencies]
tokio = { version = "1.40", features = ["full"] }
rumqttc = "0.24"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4.5", features = ["derive", "env"] }
uuid = { version = "1.10", features = ["v4"] }
